force-app/main/default/objects/player__c/fields/Game_Team__c.field-meta.xml
<CustomField>
    <fullName>Game_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game Team</label>
    <referenceTo>Game_Team__c</referenceTo>
    <relationshipLabel>players</relationshipLabel>
    <relationshipName>players</relationshipName>
    <type>Lookup</type>
</CustomField>