force-app/main/default/objects/player__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>